--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -1896,7 +1896,7 @@ $E[\frac{y^2-y}{n^2-n}]=p^2$
 
 (c) What is the MVUE of $pq=p(1-p)$?
 
-$\frac{y}n-\frac{y^2-y}{n^2-n}$
+$\frac{y}n-\frac{y^2-y}{n^2-n}=\frac{Y(n-Y)}{n(n-1)}$
 
 (d) <span style="color:red"> What is the MVUE of $P(Y=k)=\binom{n}{k}p^k(1-p)^{n-k}$?</span>
 
@@ -2187,17 +2187,19 @@ Suppose $X_1,X_2,..,X_n$ is a random sample of $N(\mu,\sigma^2)$ random variable
 
 $\hat\sigma^2=\frac{\sum(x_i-\mu)^2}{n}$
 
-$E[\frac{n-1}{n}S^2]=\frac{n-1}{n}\sigma^2$
+$E[\hat\sigma^2]=\frac{E[\sum(x_i-\mu)^2]}{n}=\frac{n-1}{n}E[S^2]=\frac{n-1}{n}\sigma^2$
 
 (b) Compute the correlation of $\bar X$ and $X_n$. (2 pts)
 
-$\sigma^2/n$
+$Var[X_n]=\sigma^2$, $Var[\bar X]=\sum Var[X_i]/n^2=\sigma^2/n$
 
-$f(\bar X,X_n)=$
+$Cov[\bar X,X_n]=Cov[\sum X_i,X_n]/n=\frac{n-1}{n}\sigma^2$
 
-$Cor(\bar X,X_n)=E[\bar XX_n]-\mu_{\bar X}\mu_{X_n}$
+$\rho=\frac{Cov[\bar X,X_n]}{\sqrt{Var[\bar X]Var[X_n]}}=\frac1{\sqrt{n}}$
 
-$1-\rho^2=\frac1{n}$, $\rho=\sqrt{1-\frac1{n}}$
+Another methods
+
+$(1-\rho^2)\sigma^2=\frac{\sigma^2}{n}$, 
 
 ### 2017S6
 [2003F9][] [2011F6][] [@Pois] [UMP][8.3.2]
